# EVC_Group3_2025

./: README.md
warehouse_ws/devel/: .catkin  local_setup.sh
warehouse_ws/devel/include/jetson_camera/: FACEdata.h  ImagePair.h  QRdata.h
warehouse_ws/devel/lib/pkgconfig/: jetson_camera.pc
warehouse_ws/devel/share/jetson_camera/cmake/: jetson_camera-msg-extras.cmake  jetson_camera-msg-paths.cmake  jetson_cameraConfig.cmake
warehouse_ws/src/jetson_camera/: CMakeLists.txt  calibration_result.npz  camera_calibration.py  package.xml
warehouse_ws/src/jetson_camera/config/: face_rec.yml  known_faces_1.pkl  known_faces_last.pkl  motor_params.yaml  parameters.yaml
warehouse_ws/src/jetson_camera/launch/: camera_publisher.launch  encoder_controller.launch  erik.launch  face_park.launch  face_parking.launch  motor_controller.launch  qr_navigation.launch  routing.launch  task_manager.launch
warehouse_ws/src/jetson_camera/msg/: FACEdata.msg  ImagePair.msg  QRdata.msg
warehouse_ws/src/jetson_camera/src/: Adafruit_I2C.py  camera_publisher_node.py  encoderDriver.py  encoder_controller.py  face_recognition.py  hat.py  motorDriver.py  motor_controller.py  qr_navigation.py  routing.py  taskManager.py
